// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProgressIndicator /> when complete matches its snapshot 1`] = `
<ProgressIndicator
  ariaValueText="100% complete"
  className="y-progress-indicator"
  description=""
  label=""
  percentComplete={1}
  width={180}
/>
`;

exports[`<ProgressIndicator /> when incomplete matches its snapshot 1`] = `
<ProgressIndicator
  ariaValueText="50% complete"
  className="y-progress-indicator y-progress-indicator__incomplete"
  description=""
  label=""
  percentComplete={0.5}
  width={180}
/>
`;

exports[`<ProgressIndicator /> with additional className matches its snapshot 1`] = `
<ProgressIndicator
  ariaValueText="50% complete"
  className="y-progress-indicator y-progress-indicator__incomplete TEST_CLASS"
  description=""
  label=""
  percentComplete={0.5}
  width={180}
/>
`;
